btrbk-current

  * Allow converting backup disks to source disks (close #114).
  * Show aggregate "size" and "used" for "usage" action (close #119).
  * raw_target_encrypt: Always set "gpg --no-random-seed-file":
    prevents creation of "~/.gnupg/random_seed" with slight perfomance
    penalty.

btrbk-0.24.0

  * MIGRATION
    - update ssh_filter_btrbk.sh on remote hosts if "stream_compress"
      is enabled. Also add "--compress" option to ssh_filter_btrbk.sh
      invocation if "stream_compress" is enabled.
  * Add "stream_compress" configuration option.
  * Perform extra metadata check on target subvolume after "btrfs
    receive" (adds an additional call to "btrfs subvolume show").
  * Bugfix: Replace "realpath" with "readlink" in ssh_filter_btrbk.sh
  * Add "raw_target_block_size" configuration option (close #105).
  * Add "backend" configuration option (experimental).
  * Bugfix: fix "list latest" with no snapshots (close #111).
  * Support for btrfs-progs v4.8.3: fix parsing of "btrfs sub show"
    output, which has changed for toplevel subvolume.

btrbk-0.23.3

  * Replace "realpath -e" with "readlink -e" for mountpoint discovery
    (close #92).
  * Dynamically set BINDIR in btrbk.service by Makefile.
  * Add ChangeLog to DOCDIR in Makefile.

btrbk-0.23.2

  * Added "lockfile" configuration option and --lockfile command line
    option (close: #81).
  * Bugfix: raw targets: correctly handle multiple backups in same
    target directory (close: #87).
  * Use relative instead of absolute binary calls in btrbk-mail.

btrbk-0.23.1

  * Bugfix: set correct parent section when propagating targets
    (close: #85).
  * Add syslog output of transaction log (close #82).
  * Do not print headers to transaction log anymore.
  * Explain "orphaned" status in "stats" command, and suppress it on
    "list backups" command (close: #76).

btrbk-0.23.0

  * INCOMPATIBLE CONFIGURATION:
    * Please read "doc/upgrade_to_v0.23.0.md" for details on updating