@@ -1,6 +1,7 @@
 btrbk-current
 
   * Allow converting backup disks to source disks (close #114).
+  * Add "backend btrfs-progs-sudo" configuration option (close #115).
   * Show aggregate "size" and "used" for "usage" action (close #119).
   * raw_target_encrypt: Always set "gpg --no-random-seed-file":
     prevents creation of "~/.gnupg/random_seed" with slight perfomance
